Fix contrast issue with menu buttons with Modern: urban Blue theme when LO set to Menu or Menu with controls navigation.

--- a/themes/Nottingham/modernandurban/scss/_footer.scss
+++ b/themes/Nottingham/modernandurban/scss/_footer.scss
@@ -76,6 +76,7 @@
 }
 #menuItems .menuItem {
   background: $lightestcolor;
+  color: $blackordarkest;
 }
 #menuItems .menuItem:hover {
   background: $contrastcolor;
